# lightfm-playground

./: .gitignore  Dockerfile  README.md  build-in-docker.sh  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup.py
.devcontainer/: devcontainer.json
generator/: generate.py
playground/: main.py
playground/generator/: generate.py
playground/generators/: generators.py
